Fixed collapsable panels so they work with the new panel grid-layout setup

--- a/inst/resources/gridlayout.css
+++ b/inst/resources/gridlayout.css
@@ -56,7 +56,8 @@
 
 
 .grid_panel.collapsed  {
-  height: var(--card-title-height);
+  grid-template-rows: min-content 0;
+  height: min-content;
   overflow: hidden;
 }
 
